Fix text-alignment for responsive design

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: #c86cb4;
   border-radius: 25px;
   background-image: url("https://www.transparenttextures.com/patterns/rocky-wall.png");
